src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  padding: 0;
  margin: 0;
  overflow-x: hidden;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

@font-face {
  font-family: "SFProDisplay";
  src: url("/fonts/SFPro/SFProDisplay-Regular.ttf") format("truetype");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "SFProDisplay";
  src: url("/fonts/SFPro/SFProDisplay-Bold.ttf") format("truetype");
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: "SFProText";
  src: url("/fonts/SFPro/SFProText-Regular.ttf") format("truetype");
  font-weight: 400;
  font-style: normal;
}

.slider {
  width: 40%;
  border-radius: 50px;
  margin-right: 30px !important;
}
.slider__item {
  row-gap: 10px;
  width: 350px !important;
  row-gap: 10px !important;
}
.card {
  width: 340px;
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  margin: 20px;
  transition: box-shadow 0.5s ease;
  height: 500px;
}

.card:hover {
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
}

.card-image {
  width: 100%;
  height: 260px;
  object-fit: cover;
}

.card-content {
  padding: 16px;
  background: white;
  width: 100%;
}

/* FOOTER ---------------------------------------------------------FOOTER */

/* Base styles */
.footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #df1780;
  color: white;
  padding: 20px;
  text-align: center;
}

.footer h1 {
  font-size: 5vw; /* Adjusts size based on the screen width */
  font-weight: 860;
}

.footer .button {
  background-color: white;
  color: #df1780;
  border: none;
  padding: 10px 20px;
  cursor: pointer;
  font-size: 2vw;
  margin-top: 20px;
}

.footer .logo {
  width: 15vw; /* Adjust size based on screen width */
  margin-top: 20px;
}

/* Media Queries for Responsiveness */
@media (max-width: 768px) {
  .footer {
    flex-direction: column;
  }

  .footer h1 {
    font-size: 7vw;
  }

  .footer .button {
    font-size: 3vw;
  }

  .footer .logo {
    width: 25vw;
  }
  .card {
    width: 162.59px !important; /* Adjust the width to be a percentage of the screen */
    margin: 10px;
    height: 236.8px !important; /* Smaller margin on mobile */
  }
  .card-image {
    width: 100%;
    height: 125.07px;
    object-fit: cover;
    border-radius: 4.17px, 4.17px, 0px, 0px;
  }
}

@media (max-width: 480px) {
  .footer h1 {
    font-size: 9vw;
  }

  .footer .button {
    font-size: 4vw;
  }
  .card {
    width: 100% !important;
    border-radius: 8px;
    overflow: hidden;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    margin: 20px;
    transition: box-shadow 0.5s ease;
    height: 450px;
  }
  .card {
    width: 100% !important; /* Adjust the width to be a percentage of the screen */
    margin: 10px !important;
    height: 236.8px !important;
    display: flex !important;
    flex-direction: column !important;
    justify-content: center !important; /* Smaller margin on mobile */
    align-items: center !important;
  }
  .card-image {
    width: 100%;
    height: 125.07px;
    object-fit: cover;
    border-radius: 4.17px, 4.17px, 0px, 0px;
  }
}
@media (max-width: 1200px) {
  .footer h1 {
    font-size: 9vw;
  }

  .footer .button {
    font-size: 4vw;
  }
  .card {
    width: 100% !important;
    border-radius: 8px;
    overflow: hidden;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    margin: 5px;
    transition: box-shadow 0.5s ease;
  }
}

@media (max-width: 1200px) {
  .card {
    width: 80% !important;
    border-radius: 8px;
    overflow: hidden;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    margin: 5px;
    transition: box-shadow 0.5s ease;
  }
}

body {
  margin: 0px;
  padding: 0px;
  overflow-x: hidden;
}
.hide {
  visibility: hidden;
}
.show {
  visibility: visible;
}
.section {
  position: sticky;
}
.sticky {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
}
.hero-container {
  height: 450vh;
}
.hero {
  width: 100%;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-items: center;
  justify-content: space-evenly;
  align-items: center;
  overflow: hidden;
  margin: 0;
  padding: 0;
}
.video-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  justify-items: center;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 3;
  object-fit: cover;
}

.hero-subtitle {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  justify-items: center;
  align-items: center;
}
.subtitle-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.hero-rows {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.hero-row {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
}
.hero-row-text {
  font-size: 3rem;
  color: white;
  font-weight: 860;
  font-family: sans-serif;
  letter-spacing: -0.085459375rem;
}

@media (max-width: 768px) {
  .hero-row-text {
    font-size: 1.8rem;
  }
}
.hero-bottom {
  width: 80%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  justify-items: center;
}
.gif-container {
  color: white;
  font-size: 48px;
  text-align: right;
}
.scroll-arrow {
  color: white;
  font-size: 48px;
}
.centered-div {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  height: 100vh;
  padding: 20px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}
/* ... */

